<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:showDividers="beginning|middle|end">
        <!--<TableRow>-->
        <!--<Button-->
        <!--android:id="@+id/rate"-->
        <!--android:onClick="rateInstructor"-->
        <!--android:gravity="center"-->
        <!--android:layout_column="1"-->
        <!--android:text="@string/rateButton"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_height="33dip"-->
        <!--android:layout_gravity="center" />-->
        <!--</TableRow>-->
        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/FirstName"
                android:layout_marginRight="3dp"/>

            <TextView
                android:gravity="left"
                android:id="@+id/firstName"
                android:padding="3dip"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/LastName"
                android:layout_marginRight="3dp"/>

            <TextView
                android:id="@+id/lastName"
                android:padding="3dip"
                android:layout_span="3"
                android:gravity="left"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/Office"
                android:layout_marginRight="3dp"/>

            <TextView
                android:id="@+id/office"
                android:padding="3dip"
                android:layout_span="3"
                android:gravity="left"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/Phone"
                android:layout_marginRight="8dp"/>

            <TextView
                android:id="@+id/phone"
                android:padding="3dip"
                android:layout_span="3"
                android:gravity="left"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/Email"
                android:layout_marginRight="3dp"/>

            <TextView
                android:gravity="left"
                android:id="@+id/email"
                android:padding="3dip"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/average"
                android:layout_marginRight="3dp"/>

            <TextView
                android:id="@+id/average"
                android:padding="3dip"
                android:gravity="left"/>
        </TableRow>
        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/totalRatings"
                android:layout_column="0"
                android:layout_marginRight="3dp"/>
            <TextView
                android:id="@+id/totalRatings"
                android:padding="3dip"
                android:gravity="left"
                android:layout_span="3"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/rate"
        android:onClick="rateInstructor"
        android:gravity="center"
        android:text="@string/rateButton"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="5dp"/>

    <TextView
        android:padding="3dip"
        android:text="@string/Comments"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:id="@+id/review_button"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#000000"
        android:dividerHeight="0.5dip">
    </ListView>
</LinearLayout>