<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:scrollbarStyle="outsideInset"
        android:layout_weight="1"
        android:id="@+id/m_scroll"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/m_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rating"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>


            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Comments"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/commentsText"
                android:layout_width="367dp"
                android:layout_height="241dp"
                android:inputType="textMultiLine"
                android:layout_gravity="top"
                >
                <requestFocus />
            </EditText>

        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="submitRatingComments"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>
